Use Stream.toList
Most of the changes are whitespace fixes done by save actions.